# EVA

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  run.py  start.ps1  start.sh
.github/workflows/: ci.yml
.kiro/specs/autonomous-eva-birth-readiness/: tasks.md
configs/: default.yaml
docs/: ARCHITECTURE.md  EVOLUTION.md  INSTALL.md  MEMORY.md  SELF_MODIFICATION.md  TOOLS.md  UI.md
eva/autonomy/: __init__.py  self_model.py  self_modifier.py
eva/core/: baby_brain.py  config.py  tokenizer.py
eva/curiosity/: reward.py
eva/emotions/: developmental.py
eva/environment/: base.py  nursery.py
eva/evolution/: __init__.py  evolver.py
eva/guidance/: covenant.py
eva/identity/: __init__.py  lineage.py
eva/memory/: episodic.py  persistent.py
eva/reproduction/: __init__.py  birth.py
eva/tools/: __init__.py  acquirer.py  base.py  builtins.py  registry.py  usage_tracker.py
eva/training/: loop.py
eva/transparency/: LOG_EXPORTER.md  README.md  THOUGHT_TRACER.md  __init__.py  behavioral_analyzer.py  emergence_detector.py  log_exporter.py  logger.py  memory_inspector.py  safety_monitor.py  thought_tracer.py
eva/ui/: __init__.py  server.py
eva/ui/static/: app.css  app.js  index.html
examples/: log_exporter_demo.py  thought_tracer_demo.py
tests/: conftest.py  test_behavioral_analyzer.py  test_core.py  test_curiosity.py  test_emergence_detector.py  test_evolution.py  test_guidance.py  test_log_exporter.py  test_memory.py  test_memory_inspector.py  test_persistent_memory.py  test_reproduction.py  test_safety_monitor.py  test_self_model.py  test_self_modifier.py  test_thought_tracer.py  test_tool_learning_integration.py  test_tools_builtins.py  test_transparency_logger.py
